--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2021"
 axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
 blake3 = "1.4.1"
 chrono = { version = "0.4.31", features = ["serde"] }
+dotenvy = "0.15.7"
 log = "0.4.20"
 rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
 simple_logger = "4.2.0"
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
 tokio = { version = "1.32.0", features = ["full"] }
+toml = "0.8.0"
