--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ log = { version = "0.4.20", features = ["serde"] }
 rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
 simple_logger = "4.2.0"
-sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
+sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono"] }
 tokio = { version = "1.32.0", features = ["full"] }
 toml = "0.8.0"
