--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
+bincode = "1.3.3"
 blake3 = "1.4.1"
 chrono = { version = "0.4.31", features = ["serde"] }
 dotenvy = "0.15.7"
