--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 port = 3000
 # Values below have defaults
-#max_strikes=30
+#record_ips = false
+#max_strikes = 30
 #record_ips = false
 #log_level = "info"
