--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,9 @@
 port = 3000
 # Values below have defaults
-#record_ips = false
 #max_strikes = 30
 #record_ips = false
 #log_level = "info"
+
+# Disabled by default
+#[token_config]
+#creation_requires_auth = false
