--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bincode = "1.3.3"
 blake3 = "1.4.1"
 chrono = { version = "0.4.31", features = ["serde"] }
 dotenvy = "0.15.7"
+headers = "0.3.9"
 log = { version = "0.4.20", features = ["serde"] }
 rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
