--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,13 @@ port = 3000
 # Disabled by default, to enable just uncomment the table header, specifying properties is optional (would be set to default)
 #[ip_recording]
 #  Allowed suffixes: 'Y', 'M', 'w', 'd', 'h'/'H', 'm', 's'
+#    'Y' - Years
+#    'M' - Months
+#    'w' - weeks
+#    'd' - days
+#    'h'/'H' - hours
+#    'm' - minutes
+#    's' - seconds
 #retention_period = "2w"
 #  Uses cron job scheduling syntax
 #retention_check_period = "0 0 * * *"
