--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ dotenvy = "0.15.7"
 headers = "0.3.9"
 log = { version = "0.4.20", features = ["serde"] }
 rand = "0.8.5"
-serde = { version = "1.0.188", features = ["derive"] }
+serde = { version = "1.0.188", features = ["derive", "rc"] }
 simple_logger = "4.2.0"
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "chrono", "mysql"] }
 tokio = { version = "1.32.0", features = ["full"] }
