--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = { version = "0.4.31", features = ["serde"] }
 dotenvy = "0.15.7"
 headers = "0.3.9"
 log = { version = "0.4.20", features = ["serde"] }
+mime = "0.3.17"
 rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive", "rc"] }
 simple_logger = "4.2.0"
