--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "sayless"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
+axum = { version = "0.8.0", features = ["http2", "macros"] }
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
 chrono = { version = "0.4.31", features = ["serde"] }
-headers = "0.3.9"
+headers = "0.4.0"
 mime = "0.3.17"
-rand = "0.8.5"
-tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
+rand = "0.9.0"
+tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
 tokio = { workspace = true }
 sqlx = { workspace = true }
 simple_logger = { workspace = true }
@@ -27,9 +28,9 @@ members = ["sayless-frontend", "sayless-link-moderation"]
 toml = "0.8.2"
 tokio = { version = "1.32.0", features = ["full"] }
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "chrono", "mysql"] }
-simple_logger = "4.2.0"
+simple_logger = "5.0.0"
 log = { version = "0.4.20", features = ["serde"] }
 dotenvy = "0.15.7"
 bincode = "1.3.3"
-blake3 = "1.4.1"
+blake3 = "1.8.1"
 serde = { version = "1.0.188", features = ["derive", "rc"] }
