--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bincode = { workspace = true }
 blake3 = { workspace = true }
 serde = { workspace = true }
 toml = { workspace = true }
+futures-util = "0.3.31"
 
 [workspace]
 members = ["sayless-frontend", "sayless-link-moderation"]
